--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,4 +13,4 @@ jobs:
       - name: build
         run: DC_ENV=test dcdy build
       - name: test
-        run: DC_ENV=test dcdy run --rm app /bin/bash -c "source $HOME/.sdkman/bin/sdkman-init.sh && sbt test"
+        run: DC_ENV=test dcdy run --rm app sbt test"
