--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       - name: install dcdy
         run: |
           mkdir -p ~/.local/bin
-          export $PATH="$PATH:$HOME/.local/bin"
+          export PATH="$PATH:$HOME/.local/bin"
           curl -sSf https://raw.githubusercontent.com/kgtkr/dcdy/master/install.sh | sh
       - name: build
         run: DC_ENV=test dcdy build
