PATH追加ミス修正

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,8 @@ jobs:
       - name: install dcdy
         run: |
           mkdir -p ~/.local/bin
-          export PATH="$PATH:$HOME/.local/bin"
           curl -sSf https://raw.githubusercontent.com/kgtkr/dcdy/master/install.sh | sh
+          echo ::add-path::$HOME/.local/bin
       - name: build
         run: DC_ENV=test dcdy build
       - name: test
