--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,6 @@ on: [push]
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v1
       - name: install dcdy
@@ -17,3 +16,16 @@ jobs:
         run: DC_ENV=test dcdy build
       - name: test
         run: DC_ENV=test dcdy run --rm app sbt test
+  publish:
+    runs-on: ubuntu-latest
+    needs: [build-and-test]
+    steps:
+      - uses: actions/checkout@v1
+      - name: login
+        run: docker login docker.pkg.github.com -u $GITHUB_ACTOR -p $GITHUB_TOKEN
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: build
+        run: docker build -t docker.pkg.github.com/$GITHUB_REPOSITORY/twitter-tools:$GITHUB_SHA .
+      - name: push
+        run: docker push docker.pkg.github.com/$GITHUB_REPOSITORY/twitter-tools:$GITHUB_SHA
