--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,9 +22,9 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: login
-        run: docker login docker.pkg.github.com -u $GITHUB_ACTOR -p $GITHUB_PACKAGE_REGISTRY_TOKEN
+        run: docker login docker.pkg.github.com -u $GITHUB_ACTOR -p $GITHUB_TOKEN
         env:
-          GITHUB_PACKAGE_REGISTRY_TOKEN: ${{ secrets.GITHUB_PACKAGE_REGISTRY_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: build
         run: docker build -t docker.pkg.github.com/$GITHUB_REPOSITORY/twitter-tools:$GITHUB_SHA .
       - name: push
