--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,9 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: login
-        run: docker login docker.pkg.github.com -u $GITHUB_ACTOR -p $GITHUB_TOKEN
+        run: docker login docker.pkg.github.com -u $GITHUB_ACTOR -p $PACKAGES_TOKEN
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PACKAGES_TOKEN: ${{ secrets.PACKAGES_TOKEN }}
       - name: build
         run: docker build -t docker.pkg.github.com/$GITHUB_REPOSITORY/twitter-tools:$GITHUB_SHA .
       - name: push
