--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
       - name: test
         run: DCDY_MODE=test dcdy run --rm app sbt test
   publish:
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop' || startsWith(github.ref, 'refs/heads/topic/')
     runs-on: ubuntu-latest
     needs: [build-and-test]
     steps:
