--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
         run: DCDY_MODE=test dcdy run --rm app sbt test
   publish:
     if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop' || startsWith(github.ref, 'refs/heads/topic/')
+    env:
+      IMAGE_TAG: docker.pkg.github.com/$GITHUB_REPOSITORY/twitter-tools:$GITHUB_SHA
     runs-on: ubuntu-latest
     needs: [build-and-test]
     steps:
@@ -27,6 +29,6 @@ jobs:
         env:
           PACKAGES_TOKEN: ${{ secrets.PACKAGES_TOKEN }}
       - name: build
-        run: docker build -t docker.pkg.github.com/$GITHUB_REPOSITORY/twitter-tools:$GITHUB_SHA .
+        run: docker build -t $IMAGE_TAG .
       - name: push
-        run: docker push docker.pkg.github.com/$GITHUB_REPOSITORY/twitter-tools:$GITHUB_SHA
+        run: docker push $IMAGE_TAG
